# EMS

./: .gitignore
components/backend/ems/: .env  .gitignore  Dockerfile  README.MD  README.md  build.gradle.kts  docker-compose.dev.yml  entrypoint.sh  pyproject.toml  requirements.txt
components/backend/ems/ems/adapters/database/: mapping.py  settings.py  tables.py
components/backend/ems/ems/adapters/database/alembic/: env.py
components/backend/ems/ems/adapters/database/migrations/: 2023_10_13_17_17_42_init_schema.py  2023_10_23_10_39_32_add_user_password.py  2023_10_31_13_53_11_create_indexes.py  2023_12_02_16_06_10_add_user_liked_event_fields.py  2023_12_08_16_01_08_covers_table.py  2023_12_08_17_07_46_timezone_aware_datetimes.py  2023_12_29_14_37_08_remove_event_version.py  (+1 more)
components/backend/ems/ems/adapters/http_api/: app.py  auth.py  dependencies.py  settings.py
components/backend/ems/ems/adapters/log/: settings.py
components/backend/ems/ems/adapters/storage/: __init__.py  image_store.py  settings.py
components/backend/ems/ems/application/: entities.py
components/backend/ems/ems/application/dto/: __init__.py
components/backend/ems/ems/application/enum/: __init__.py
components/backend/ems/ems/application/interfaces/: __init__.py  club_repository.py  event_repository.py  event_type_repository.py  image_store.py  user_repository.py  user_voted_event_repository.py
components/backend/ems/ems/application/services/: __init__.py  auth_service.py  club_service.py  event_service.py  event_type_service.py  user_service.py
components/backend/ems/ems/composites/: alembic_runner.py  http_api.py
components/backend/ems/ems_libs/logging_formatter/: __init__.py  formatter.py
components/backend/ems/ems_libs/security/auth_strategies/: jwt_strategy.py
components/backend/ems/src/ems/application/: entities.py  enum.py
components/backend/ems/src/ems/composites/: alembic_runner.py  http_api.py
components/backend/ems/src/ems_libs/logging_formatter/: formatter.py
components/backend/ems/src/ems_libs/security/: __init__.py  hasher.py
components/botBySvinarevEA_0_0_1/: .env  README.md  pyproject.toml
components/botBySvinarevEA_0_0_1/src/botbysvinarevea_0_0_1/: __init__.py
components/botBySvinarevEA_0_0_1/src/botbysvinarevea_0_0_1/bot/: bot.py
components/botBySvinarevEA_0_0_1/src/botbysvinarevea_0_0_1/cli/: async_typer.py  cli.py
components/botBySvinarevEA_0_0_1/src/botbysvinarevea_0_0_1/config/: settings.py
(+274 files in other folders)
