[project]
name = "botbysvinarevea-0-0-1"
version = "0.0.1"
description = "EMS Telegram Bot"
authors = [
    { name = "EgorSvinarev", email = "nagibator_babusek@pavlova.ru" }
]
dependencies = [
    "aiofiles>=23.2.1",
    "asyncio>=3.4.3",
    "aiohttp == 3.9.1",
    "attrs>=23.1.0",
    "fastapi>=0.104.1",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.2",
    "pytelegrambotapi==4.14.1",
    "typer==0.12.3",
    "rich==13.7.1"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/botbysvinarevea_0_0_1"]
